# fogwatch

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  MANUAL.md  README.md  fogwatch.toml.sample
src/: config.rs  main.rs  tui.rs  types.rs
