[package]
name = "fogwatch"
version = "0.1.0"
edition = "2021"
description = "A real-time log viewer for Cloudflare Workers with filtering and multiple output formats"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/fogwatch"
keywords = ["cloudflare", "workers", "logs", "monitoring", "cli"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
futures-util = "0.3"
url = "2.5"
colored = "2.1"
dialoguer = "0.11"
indicatif = { version = "0.17", features = ["improved_unicode"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.28.1"
toml = "0.8"
dirs = "5.0"
